--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -4,33 +4,34 @@ version = "0.1.0"
 description = ""
 requires-python = ">=3.12,<4.0"
 dependencies = [
-    "fastapi[standard]<1.0.0,>=0.114.2",
-    "python-multipart<1.0.0,>=0.0.7",
-    "email-validator<3.0.0.0,>=2.1.0.post1",
-    "passlib[bcrypt]<2.0.0,>=1.7.4",
-    "tenacity<9.0.0,>=8.2.3",
+    "fastapi[standard]>=0.114.2,<1.0.0",  # TODO: review
+    "python-multipart>=0.0.21,<1.0.0",
+    "email-validator>=2.3.0,<3.0.0",
+    "passlib[bcrypt]>=1.7.4,<2.0.0",
+    "tenacity>=8.2.3,<9.0.0",
     "pydantic>2.0",
-    "emails<1.0,>=0.6",
-    "jinja2<4.0.0,>=3.1.4",
-    "alembic<2.0.0,>=1.12.1",
-    "httpx<1.0.0,>=0.25.1",
-    "psycopg[binary]<4.0.0,>=3.1.13",
-    "sqlmodel<1.0.0,>=0.0.21",
+    "emails>=0.6,<1.0",
+    "jinja2>=3.1.4,<4.0.0",
+    "alembic>=1.12.1,<2.0.0",
+    "httpx>=0.25.1,<1.0.0",
+    "psycopg[binary]>=3.1.13,<4.0.0",
+    "sqlmodel>=0.0.21,<1.0.0",
     # Pin bcrypt until passlib supports the latest
     "bcrypt==4.3.0",
-    "pydantic-settings<3.0.0,>=2.2.1",
-    "sentry-sdk[fastapi]<2.0.0,>=1.40.6",
-    "pyjwt<3.0.0,>=2.8.0",
+    "pydantic-settings>=2.2.1,<3.0.0",
+    "sentry-sdk[fastapi]>=1.40.6,<2.0.0",
+    "pyjwt>=2.8.0,<3.0.0",
+    "sqlalchemy>=2.0.35",
 ]
 
 [tool.uv]
 dev-dependencies = [
-    "pytest<8.0.0,>=7.4.3",
-    "mypy<2.0.0,>=1.8.0",
-    "ruff<1.0.0,>=0.2.2",
-    "prek>=0.2.24,<1.0.0",
-    "types-passlib<2.0.0.0,>=1.7.7.20240106",
-    "coverage<8.0.0,>=7.4.3",
+    "pytest>=7.4.3,<8.0.0",
+    "mypy>=1.19.1,<2.0.0",
+    "ruff>=0.14.13,<1.0.0",
+    "prek>=0.2.30,<1.0.0",
+    "types-passlib>=1.7.7.20240106,<2.0.0.0",
+    "coverage>=7.4.3,<8.0.0",
 ]
 
 [build-system]
